--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^21.3.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
